fixed touch-scrolling by changed form visibility to display for overlays

--- a/src/main/webapp/app/styles/modals.css
+++ b/src/main/webapp/app/styles/modals.css
@@ -7,7 +7,6 @@
 	min-width: 20em;
 	height: auto;
 	z-index: 20000;
-	visibility: hidden;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
@@ -16,17 +15,18 @@
 	-ms-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
 	overflow: visible;
+  display: none !important;
 }
 
 .md-show {
-	visibility: visible;
+	display: block !important;
 }
 
 div.md-overlay {
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	visibility: hidden;
+  display: none !important;
 	top: 0;
 	left: 0;
 	z-index: 10000;
@@ -43,7 +43,7 @@ div.md-overlay {
 
 div.md-overlay.md-show {
 	opacity: 1;
-	visibility: visible;
+	display: block !important;
 }
 
 /* Content styles */
